# Imaginenc

./: README.md  imaginenc.py  main.py  requirements.txt  setup.cfg
imaginenc/: __init__.py  __main__.py  imaginenc.py
src/: imaginenc.py
src/imaginenc/: __init__.py  imaginenc.py
tests/: test_imaginenc.py
