[metadata]
name = imaginenc
version = 1.0.1
author = LordDeatHunter
author_email = desuhansa@gmail.com
description = Convert any file into an image
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LordDeatHunter/Imaginenc
project_urls =
    Bug Tracker = https://github.com/LordDeatHunter/Imaginenc/issues
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
platforms = any

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    Pillow>=8.3.0

[options.entry_points]
console_scripts =
    imaginenc = imaginenc.imaginenc:main
